[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vrtnws"
version = "0.1.0"
description = "VRT NWS terminal reader"
requires-python = ">=3.11"
dependencies = [
    "textual>=8.2",
    "httpx>=0.27",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "pillow>=12.0",
    "pyfiglet>=1.0",
]

[project.scripts]
vrtnws = "vrtnws:main"

[tool.setuptools]
py-modules = ["vrtnws"]
